force-app/main/default/objects/ServicePoint__c/ServicePoint__c.object-meta.xml
<CustomObject>
    <description>Oggetto Custom per tracciare i dati del POD/PDR</description>
    <label>Service Point</label>
    <nameField>
        <label>Service Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>