force-app/main/default/objects/ServicePoint__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account del titolare del punto di fornitura</description>
    <label>Account Titolare</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Points (Account)</relationshipLabel>
    <relationshipName>Service_Points</relationshipName>
    <type>Lookup</type>
</CustomField>