force-app/main/default/objects/ServicePoint__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Concatenazione campi indirizzo. Può visualizzare fino a 1300 caratteri</description>
    <formula>SupplyStreet__c &amp; SupplyStreetNumber__c &amp; SupplyStreetNumberExtension__c &amp; SupplyPlace__c &amp; SupplyCity__c &amp; SupplyProvince__c &amp; SupplyPostalCode__c &amp; SupplyCountry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply Address</label>
    <type>Text</type>
</CustomField>