force-app/main/default/objects/ServicePoint__c/fields/AfDistrib__c.field-meta.xml
<CustomField>
    <fullName>AfDistrib__c</fullName>
    <label>Operando Distribuzione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>