force-app/main/default/objects/ServicePoint__c/fields/AggregateBilling__c.field-meta.xml
<CustomField>
    <fullName>AggregateBilling__c</fullName>
    <label>Fatturazione aggregata</label>
    <length>50</length>
    <type>Text</type>
</CustomField>