force-app/main/default/objects/ServicePoint__c/fields/AlignmentFrequencyGAA__c.field-meta.xml
<CustomField>
    <fullName>AlignmentFrequencyGAA__c</fullName>
    <label>Frequenza Allineamento GAA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>