force-app/main/default/objects/ServicePoint__c/fields/AnnualConsumption__c.field-meta.xml
<CustomField>
    <fullName>AnnualConsumption__c</fullName>
    <description>Consumo Annuo</description>
    <label>Consumo Annuo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>