force-app/main/default/objects/ServicePoint__c/fields/AnnualConsumptionStandardM3__c.field-meta.xml
<CustomField>
    <fullName>AnnualConsumptionStandardM3__c</fullName>
    <description>Consumo annuo stimato correttore (solo GAS)</description>
    <label>Consumo Annuo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>