force-app/main/default/objects/ServicePoint__c/fields/AnnualVolumeReplacement__c.field-meta.xml
<CustomField>
    <fullName>AnnualVolumeReplacement__c</fullName>
    <label>Volume Annuo Sostituzione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>