force-app/main/default/objects/ServicePoint__c/fields/AreaDeclaredTARI__c.field-meta.xml
<CustomField>
    <fullName>AreaDeclaredTARI__c</fullName>
    <label>Superficie dichiarata TARI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>