force-app/main/default/objects/ServicePoint__c/fields/ATO__c.field-meta.xml
<CustomField>
    <fullName>ATO__c</fullName>
    <label>Comune ATO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>