force-app/main/default/objects/ServicePoint__c/fields/BrandLogo__c.field-meta.xml
<CustomField>
    <fullName>BrandLogo__c</fullName>
    <description>AS-Is viene valorizzato da SAP ed è comunque richiesto nelle comunicazioni con SAP</description>
    <label>Brand Logo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>