force-app/main/default/objects/ServicePoint__c/fields/CommoditySector__c.field-meta.xml
<CustomField>
    <fullName>CommoditySector__c</fullName>
    <description>Commodity del punto</description>
    <label>Servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Commodity</valueSetName>
    </valueSet>
</CustomField>