force-app/main/default/objects/ServicePoint__c/fields/ContractualExpensesCharged__c.field-meta.xml
<CustomField>
    <fullName>ContractualExpensesCharged__c</fullName>
    <label>Addebito spese contrattuali</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nessuno sconto</fullName>
            </value>
            <value>
                <fullName>Nessun addebito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>