force-app/main/default/objects/ServicePoint__c/fields/CorrectiveCoefficient__c.field-meta.xml
<CustomField>
    <fullName>CorrectiveCoefficient__c</fullName>
    <label>Coefficiente Correttivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>