force-app/main/default/objects/ServicePoint__c/fields/CorrectorDigitNumber__c.field-meta.xml
<CustomField>
    <fullName>CorrectorDigitNumber__c</fullName>
    <label>Numero Cifre Convertitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>