force-app/main/default/objects/ServicePoint__c/fields/CorrectorSignal__c.field-meta.xml
<CustomField>
    <fullName>CorrectorSignal__c</fullName>
    <label>Segnale Convertitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>