force-app/main/default/objects/ServicePoint__c/fields/CorrectorSN__c.field-meta.xml
<CustomField>
    <fullName>CorrectorSN__c</fullName>
    <label>Matricola Convertitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>