force-app/main/default/objects/ServicePoint__c/fields/CorrectorType__c.field-meta.xml
<CustomField>
    <fullName>CorrectorType__c</fullName>
    <label>Tipo Misuratore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>