force-app/main/default/objects/ServicePoint__c/fields/CorrectorWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>CorrectorWithdrawal__c</fullName>
    <label>Prelievo Convertitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>