force-app/main/default/objects/ServicePoint__c/fields/DateOfLastAlignmentGAA__c.field-meta.xml
<CustomField>
    <fullName>DateOfLastAlignmentGAA__c</fullName>
    <label>Data ultimo allineamento GAA</label>
    <type>Date</type>
</CustomField>