force-app/main/default/objects/ServicePoint__c/fields/DigitNumberActive__c.field-meta.xml
<CustomField>
    <fullName>DigitNumberActive__c</fullName>
    <label>Cifre Attiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>