force-app/main/default/objects/ServicePoint__c/fields/DigitNumberReactive__c.field-meta.xml
<CustomField>
    <fullName>DigitNumberReactive__c</fullName>
    <label>Cifre Reattiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>