force-app/main/default/objects/ServicePoint__c/fields/DisconnectibilityPhone__c.field-meta.xml
<CustomField>
    <fullName>DisconnectibilityPhone__c</fullName>
    <description>Popolare solo se Non Disalimentabile</description>
    <label>Telefono Non Disalimentabilità</label>
    <type>Phone</type>
</CustomField>