force-app/main/default/objects/ServicePoint__c/fields/DisconnectibilityType__c.field-meta.xml
<CustomField>
    <fullName>DisconnectibilityType__c</fullName>
    <description>Tipologia Disalimentabilità, vincolata al flag si</description>
    <label>Tipologia Disalimentabilità</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rilevanza continuità serv. GAS</fullName>
            </value>
            <value>
                <fullName>Sempre ap. - Elettromedicale</fullName>
            </value>
            <value>
                <fullName>Sempre ap. - Non Disalimentab.</fullName>
            </value>
            <value>
                <fullName>Sempre ap. - PESSE</fullName>
            </value>
            <value>
                <fullName>Sempre ap. - Pubblica utilita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>