force-app/main/default/objects/ServicePoint__c/fields/DispatchingPoint__c.field-meta.xml
<CustomField>
    <fullName>DispatchingPoint__c</fullName>
    <label>Punto di Dispacciamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>