force-app/main/default/objects/ServicePoint__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributore</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Necessario inserire un Account Distributore</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>HDT_RT_Distributore</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Points</relationshipLabel>
    <relationshipName>ServicePoints</relationshipName>
    <type>Lookup</type>
</CustomField>