force-app/main/default/objects/ServicePoint__c/fields/DistributorNameFormula__c.field-meta.xml
<CustomField>
    <fullName>DistributorNameFormula__c</fullName>
    <formula>Distributor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributore</label>
    <type>Text</type>
</CustomField>