force-app/main/default/objects/ServicePoint__c/fields/DistributorTreatment__c.field-meta.xml
<CustomField>
    <fullName>DistributorTreatment__c</fullName>
    <label>Trattamento Distributore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>