force-app/main/default/objects/ServicePoint__c/fields/ElectricConsumptionZone2__c.field-meta.xml
<CustomField>
    <fullName>ElectricConsumptionZone2__c</fullName>
    <label>Consumo Annuo Ele Fascia 2</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>