force-app/main/default/objects/ServicePoint__c/fields/ElectricConsumptionZone3__c.field-meta.xml
<CustomField>
    <fullName>ElectricConsumptionZone3__c</fullName>
    <label>Consumo Annuo Ele Fascia 3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>