force-app/main/default/objects/ServicePoint__c/fields/ExciseEle__c.field-meta.xml
<CustomField>
    <fullName>ExciseEle__c</fullName>
    <label>ExciseEle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>