force-app/main/default/objects/ServicePoint__c/fields/ExciseGas__c.field-meta.xml
<CustomField>
    <fullName>ExciseGas__c</fullName>
    <label>ExciseGas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>