force-app/main/default/objects/ServicePoint__c/fields/FlowComputerSN__c.field-meta.xml
<CustomField>
    <fullName>FlowComputerSN__c</fullName>
    <description>Matricola del correttore attuale</description>
    <label>Matricola Correttore</label>
    <length>18</length>
    <type>Text</type>
</CustomField>