force-app/main/default/objects/ServicePoint__c/fields/Forfait__c.field-meta.xml
<CustomField>
    <fullName>Forfait__c</fullName>
    <label>Forfait</label>
    <length>255</length>
    <type>Text</type>
</CustomField>