force-app/main/default/objects/ServicePoint__c/fields/HasAccumulationTanks__c.field-meta.xml
<CustomField>
    <fullName>HasAccumulationTanks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ha vasche accumulo</label>
    <type>Checkbox</type>
</CustomField>