force-app/main/default/objects/ServicePoint__c/fields/HydrantMouthsNumber__c.field-meta.xml
<CustomField>
    <fullName>HydrantMouthsNumber__c</fullName>
    <label>Numero Bocche Idrante</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>