force-app/main/default/objects/ServicePoint__c/fields/ImplantType__c.field-meta.xml
<CustomField>
    <fullName>ImplantType__c</fullName>
    <label>Tipologia Impianto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CommoditySector__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_ImplantType</valueSetName>
    </valueSet>
</CustomField>