force-app/main/default/objects/ServicePoint__c/fields/ImplantTypeGen__c.field-meta.xml
<CustomField>
    <fullName>ImplantTypeGen__c</fullName>
    <description>Tipo Impianto Gen</description>
    <label>Tipo Impianto Gen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>