force-app/main/default/objects/ServicePoint__c/fields/InstallationDateActive__c.field-meta.xml
<CustomField>
    <fullName>InstallationDateActive__c</fullName>
    <label>Data Installazione Attiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>