force-app/main/default/objects/ServicePoint__c/fields/InstallationDatePower__c.field-meta.xml
<CustomField>
    <fullName>InstallationDatePower__c</fullName>
    <label>Data Installazione Potenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>