force-app/main/default/objects/ServicePoint__c/fields/InstallationDateReactive__c.field-meta.xml
<CustomField>
    <fullName>InstallationDateReactive__c</fullName>
    <label>Data Installazione Reattiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>