force-app/main/default/objects/ServicePoint__c/fields/IsAddressChanged__c.field-meta.xml
<CustomField>
    <fullName>IsAddressChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAddressChanged</label>
    <type>Checkbox</type>
</CustomField>