force-app/main/default/objects/ServicePoint__c/fields/IsRemoteManaged__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impianto Telegestito</description>
    <label>Impianto Telegestito</label>
    <type>Checkbox</type>
</CustomField>