force-app/main/default/objects/ServicePoint__c/fields/isReseller__c.field-meta.xml
<CustomField>
    <fullName>isReseller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReseller</label>
    <type>Checkbox</type>
</CustomField>