force-app/main/default/objects/ServicePoint__c/fields/IstatCode__c.field-meta.xml
<CustomField>
    <fullName>IstatCode__c</fullName>
    <description>Codice ISTAT/ ATECO proveniente da arricchimento dati tag CODICE_ATECO</description>
    <label>Codice ISTAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>