force-app/main/default/objects/ServicePoint__c/fields/kActive__c.field-meta.xml
<CustomField>
    <fullName>kActive__c</fullName>
    <label>K Attiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>