force-app/main/default/objects/ServicePoint__c/fields/kPower__c.field-meta.xml
<CustomField>
    <fullName>kPower__c</fullName>
    <label>K Potenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>