force-app/main/default/objects/ServicePoint__c/fields/kReactive__c.field-meta.xml
<CustomField>
    <fullName>kReactive__c</fullName>
    <label>K Reattiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>