force-app/main/default/objects/ServicePoint__c/fields/MarketTypeCode__c.field-meta.xml
<CustomField>
    <fullName>MarketTypeCode__c</fullName>
    <label>Servizio Tutela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>