force-app/main/default/objects/ServicePoint__c/fields/MaxHourWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>MaxHourWithdrawal__c</fullName>
    <label>Max Prelievo Ora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>