force-app/main/default/objects/ServicePoint__c/fields/MeterAccessible__c.field-meta.xml
<CustomField>
    <fullName>MeterAccessible__c</fullName>
    <label>Accessibilità Misuratore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>