force-app/main/default/objects/ServicePoint__c/fields/MeterActiveSN__c.field-meta.xml
<CustomField>
    <fullName>MeterActiveSN__c</fullName>
    <label>Matricola Misuratore Attiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>