force-app/main/default/objects/ServicePoint__c/fields/MeterClass__c.field-meta.xml
<CustomField>
    <fullName>MeterClass__c</fullName>
    <description>Classe o Calibro Contatore</description>
    <label>Classe Contatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G100 Turbina</fullName>
            </value>
            <value>
                <fullName>G160 Turbina</fullName>
            </value>
            <value>
                <fullName>G250 Turbina</fullName>
            </value>
            <value>
                <fullName>G400 Turbina</fullName>
            </value>
            <value>
                <fullName>G40 Turbina</fullName>
            </value>
            <value>
                <fullName>G65 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G160 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G250 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G250G Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G650 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G1000 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G400 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G1600 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>G4000 Pistoni rot.</fullName>
            </value>
            <value>
                <fullName>DIR Monorario</fullName>
            </value>
            <value>
                <fullName>DIR Orario</fullName>
            </value>
            <value>
                <fullName>DIR Biorario</fullName>
            </value>
            <value>
                <fullName>100 Volt</fullName>
            </value>
            <value>
                <fullName>400 Volt</fullName>
            </value>
            <value>
                <fullName>230 Volt</fullName>
            </value>
            <value>
                <fullName>Elettronico</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>G1,6</fullName>
            </value>
            <value>
                <fullName>G10</fullName>
            </value>
            <value>
                <fullName>G100</fullName>
            </value>
            <value>
                <fullName>G1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>