force-app/main/default/objects/ServicePoint__c/fields/MeterDigitNumber__c.field-meta.xml
<CustomField>
    <fullName>MeterDigitNumber__c</fullName>
    <label>Numero Cifre Misuratore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>