force-app/main/default/objects/ServicePoint__c/fields/MeterGroup__c.field-meta.xml
<CustomField>
    <fullName>MeterGroup__c</fullName>
    <label>Gruppo Misuratore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>