force-app/main/default/objects/ServicePoint__c/fields/MeterPowerSN__c.field-meta.xml
<CustomField>
    <fullName>MeterPowerSN__c</fullName>
    <label>Matricola Misuratore Potenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>