force-app/main/default/objects/ServicePoint__c/fields/MeterReactiveSN__c.field-meta.xml
<CustomField>
    <fullName>MeterReactiveSN__c</fullName>
    <label>Matricola Misuratore Reattiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>