force-app/main/default/objects/ServicePoint__c/fields/MeterSignal__c.field-meta.xml
<CustomField>
    <fullName>MeterSignal__c</fullName>
    <label>Segnale Misuratore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>