force-app/main/default/objects/ServicePoint__c/fields/MeterSN__c.field-meta.xml
<CustomField>
    <fullName>MeterSN__c</fullName>
    <description>Matricola del contatore attuale</description>
    <label>Matricola Contatore</label>
    <!--Modificata lunghezza campo da 255 a 18 in quanto Siebel, SAP non accettano matricole superiori ai 18
    Essendo un campo compilabile dall'operatore, al fine di preservare la coerenza dei dati tra i sistemi
    e' stata applicata la modifica della lunghezza.
    -->
    <length>18</length>
    <type>Text</type>
</CustomField>