force-app/main/default/objects/ServicePoint__c/fields/MeterStatus__c.field-meta.xml
<CustomField>
    <fullName>MeterStatus__c</fullName>
    <label>Stato Apparecchiatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bozza</fullName>
            </value>
            <value>
                <fullName>Attivo</fullName>
            </value>
            <value>
                <fullName>Inattivo</fullName>
            </value>
            <value>
                <fullName>Sospeso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>