force-app/main/default/objects/ServicePoint__c/fields/MeterYear__c.field-meta.xml
<CustomField>
    <fullName>MeterYear__c</fullName>
    <label>Anno fabbricazione misuratore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>