force-app/main/default/objects/ServicePoint__c/fields/MethodsForOutgoingPayments__c.field-meta.xml
<CustomField>
    <fullName>MethodsForOutgoingPayments__c</fullName>
    <label>Modalità per pagamenti in uscita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bollettino postale</fullName>
            </value>
            <value>
                <fullName>Bonifico bancario</fullName>
            </value>
            <value>
                <fullName>RID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>