force-app/main/default/objects/ServicePoint__c/fields/NumberOfCommunityMembers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCommunityMembers__c</fullName>
    <label>Comunità (rilevabile da operando specifi</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>