force-app/main/default/objects/ServicePoint__c/fields/NumberOfFamilyMembers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFamilyMembers__c</fullName>
    <label>Numero componenti nucleo familiare</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>