force-app/main/default/objects/ServicePoint__c/fields/NumeratorGroup__c.field-meta.xml
<CustomField>
    <fullName>NumeratorGroup__c</fullName>
    <label>Gruppo Numeratore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>