force-app/main/default/objects/ServicePoint__c/fields/OrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDueDate__c</fullName>
    <label>Data scadenza Ordine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>