force-app/main/default/objects/ServicePoint__c/fields/PayPurification__c.field-meta.xml
<CustomField>
    <fullName>PayPurification__c</fullName>
    <label>Paga Depurazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No - Esente</fullName>
            </value>
            <value>
                <fullName>Si - Paga</fullName>
            </value>
            <value>
                <fullName>Si - Ridotta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>