force-app/main/default/objects/ServicePoint__c/fields/PerformanceCost__c.field-meta.xml
<CustomField>
    <fullName>PerformanceCost__c</fullName>
    <label>Costo Prestazione</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>