force-app/main/default/objects/ServicePoint__c/fields/PlugPresence__c.field-meta.xml
<CustomField>
    <fullName>PlugPresence__c</fullName>
    <description>Valorizzato a NO indica che il punto necessita un processo di allaccio</description>
    <label>Presenza Allaccio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>