force-app/main/default/objects/ServicePoint__c/fields/PowerAvailable__c.field-meta.xml
<CustomField>
    <fullName>PowerAvailable__c</fullName>
    <description>Potenza disponibile dal Contatore</description>
    <label>Potenza Disponibile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>