force-app/main/default/objects/ServicePoint__c/fields/PowerContractual__c.field-meta.xml
<CustomField>
    <fullName>PowerContractual__c</fullName>
    <description>Potenza Richiesta dal cliente (Richiesta / Impegnata)</description>
    <label>Potenza Contrattuale</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>