force-app/main/default/objects/ServicePoint__c/fields/PowerRequested__c.field-meta.xml
<CustomField>
    <fullName>PowerRequested__c</fullName>
    <description>Specifica per l&apos;ele nei casi di attivazione con modifica.</description>
    <label>Potenza Richiesta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>