force-app/main/default/objects/ServicePoint__c/fields/PreviousYearConsumption__c.field-meta.xml
<CustomField>
    <fullName>PreviousYearConsumption__c</fullName>
    <description>Campo tecnico nascosto necessario per calcolo KPI Analisi dei consumi. Valorizzato da Mulesoft su input file da ORS.</description>
    <label>Consumi anno precedente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>