force-app/main/default/objects/ServicePoint__c/fields/RateCategory__c.field-meta.xml
<CustomField>
    <fullName>RateCategory__c</fullName>
    <label>Categoria tariffa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uso commerciale/artigianale idroesigenti</fullName>
            </value>
            <value>
                <fullName>Uso industriale idroesigenti</fullName>
            </value>
            <value>
                <fullName>Uso Promiscuo con bocche antincendio</fullName>
            </value>
            <value>
                <fullName>Uso pubbl.disalim. - Piscine Serv. Pubb.</fullName>
            </value>
            <value>
                <fullName>Ut. produttive: scar. industr. a Tariffa</fullName>
            </value>
            <value>
                <fullName>Ut. produttive: scarichi industriali</fullName>
            </value>
            <value>
                <fullName>Utenza civile  - Piscine pubbliche</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Altri usi generici</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Acqua non Potabile</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Aggiuntivo</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Agricolo</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Agricolo/Zootecnico</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Alberghiero</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Allacc.occasion.vari</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Allevamento</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Antincendio</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Antincendio con cont</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Antincendio senza C.</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Artigianale/Commerc.</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso attività varie</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Cantiere</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Commerciale</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Comunale/Ente Pubbl.</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Comunità</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso diverso da domestico</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Dom. non residente</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Domest. non resid.</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Domest. residente</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Domestico</fullName>
            </value>
            <value>
                <fullName>Utenza civile - Uso Domestico pro-capite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>