force-app/main/default/objects/ServicePoint__c/fields/RegimeDate2G__c.field-meta.xml
<CustomField>
    <fullName>RegimeDate2G__c</fullName>
    <label>Data Regime 2G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>