force-app/main/default/objects/ServicePoint__c/fields/RegionalAdditional__c.field-meta.xml
<CustomField>
    <fullName>RegionalAdditional__c</fullName>
    <description>Addizionale Regionale</description>
    <label>Addizionale Regionale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>